Added default example

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="card-body">
       <form class="d-grid gap-2">
         <div>
-          <textarea class="form-control" id="inputData" name="words" rows="6" autofocus></textarea>
+          <textarea class="form-control" id="inputData" name="words" rows="6" autofocus>arthur</textarea>
           <span class="text-muted">
             Separar palavras com ";". Ainda não suporta acentos.
           </span>
@@ -41,29 +41,36 @@
         <thead id="tableHeader">
           <tr>
             <th scope="col">#</th>
-            <th scope="col">First</th>
-            <th scope="col">Last</th>
-            <th scope="col">Handle</th>
+            <th scope="col">arthur</th>
           </tr>
         </thead>
         <tbody id="tableBody">
-          <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
-          </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>@fat</td>
-          </tr>
-          <tr>
-            <th scope="row">3</th>
-            <td colspan="2">Larry the Bird</td>
-            <td>@twitter</td>
-          </tr>
+          <tr><th scope="row">A</th><td>1</td></tr>
+          <tr><th scope="row">B</th><td>0</td></tr>
+          <tr><th scope="row">C</th><td>0</td></tr>
+          <tr><th scope="row">D</th><td>0</td></tr>
+          <tr><th scope="row">E</th><td>0</td></tr>
+          <tr><th scope="row">F</th><td>0</td></tr>
+          <tr><th scope="row">G</th><td>0</td></tr>
+          <tr><th scope="row">H</th><td>1</td></tr>
+          <tr><th scope="row">I</th><td>0</td></tr>
+          <tr><th scope="row">J</th><td>0</td></tr>
+          <tr><th scope="row">K</th><td>0</td></tr>
+          <tr><th scope="row">L</th><td>0</td></tr>
+          <tr><th scope="row">M</th><td>0</td></tr>
+          <tr><th scope="row">N</th><td>0</td></tr>
+          <tr><th scope="row">O</th><td>0</td></tr>
+          <tr><th scope="row">P</th><td>0</td></tr>
+          <tr><th scope="row">Q</th><td>0</td></tr>
+          <tr><th scope="row">R</th><td>2</td></tr>
+          <tr><th scope="row">S</th><td>0</td></tr>
+          <tr><th scope="row">T</th><td>1</td></tr>
+          <tr><th scope="row">U</th><td>1</td></tr>
+          <tr><th scope="row">V</th><td>0</td></tr>
+          <tr><th scope="row">W</th><td>0</td></tr>
+          <tr><th scope="row">X</th><td>0</td></tr>
+          <tr><th scope="row">Y</th><td>0</td></tr>
+          <tr><th scope="row">Z</th><td>0</td></tr>
         </tbody>
       </table>
     </div>
